feature/GEINFRA-131: Updated spec
