# swagger_server/models/user_deletion_data.py
@@ -9,16 +9,16 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class DeletedUserData(Model):
+class UserDeletionData(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, amount: int=None):  # noqa: E501
-        """DeletedUserData - a model defined in Swagger
+        """UserDeletionData - a model defined in Swagger
 
-        :param amount: The amount of this DeletedUserData.  # noqa: E501
+        :param amount: The amount of this UserDeletionData.  # noqa: E501
         :type amount: int
         """
         self.swagger_types = {
@@ -32,32 +32,32 @@ class DeletedUserData(Model):
         self._amount = amount
 
     @classmethod
-    def from_dict(cls, dikt) -> 'DeletedUserData':
+    def from_dict(cls, dikt) -> 'UserDeletionData':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The deleted_user_data of this DeletedUserData.  # noqa: E501
-        :rtype: DeletedUserData
+        :return: The user_deletion_data of this UserDeletionData.  # noqa: E501
+        :rtype: UserDeletionData
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def amount(self) -> int:
-        """Gets the amount of this DeletedUserData.
+        """Gets the amount of this UserDeletionData.
 
 
-        :return: The amount of this DeletedUserData.
+        :return: The amount of this UserDeletionData.
         :rtype: int
         """
         return self._amount
 
     @amount.setter
     def amount(self, amount: int):
-        """Sets the amount of this DeletedUserData.
+        """Sets the amount of this UserDeletionData.
 
 
-        :param amount: The amount of this DeletedUserData.
+        :param amount: The amount of this UserDeletionData.
         :type amount: int
         """
         if amount is None:
